--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -2,12 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "417381ee-993b-45a6-94cd-258fcc8cc2e8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-29T16:52:27.787653Z",
+     "start_time": "2025-09-29T16:52:23.223341Z"
+    }
+   },
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "file_id = \"1i_H46ci0vi-B17v8UKIGfpQeGRpaa2uI\"\n",
+    "file_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+    "\n",
+    "df = pd.read_csv(file_url)\n",
+    "numeric_cols = ['id', 'cas_number', 'molecular_weight', 'average_mass', 'density']\n",
+    "df[numeric_cols] = df[numeric_cols].apply(pd.to_numeric)\n",
+    "\n",
+    "datetime_cols = ['created_at', 'updated_at']\n",
+    "df[datetime_cols] = df[datetime_cols].apply(pd.to_datetime,)\n",
+    "\n",
+    "bool_cols = ['is_endogenous', 'is_toxin']\n",
+    "df[bool_cols] = df[bool_cols].apply(lambda x: x.map({'True': True, 'False': False, True: True, False: False}))\n",
+    "\n",
+    "df.head(10)"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "  Unnamed: 0  id    title           common_name  \\\n",
+       "0          0   2  T3D0001               Arsenic   \n",
+       "1          1   3  T3D0002                  Lead   \n",
+       "2          2   4  T3D0003               Mercury   \n",
+       "3          3   5  T3D0004        Vinyl chloride   \n",
+       "4          4   7  T3D0006               Benzene   \n",
+       "5          5   8  T3D0007               Cadmium   \n",
+       "6          6  10  T3D0009        Benzo[a]pyrene   \n",
+       "7          7  11  T3D0010  Benzo[b]fluoranthene   \n",
+       "8          8  12  T3D0011            Chloroform   \n",
+       "9          9  13  T3D0012           Clofenotane   \n",
+       "\n",
+       "                                         description        cas pubchem_id  \\\n",
+       "0  Arsenic(As) is a ubiquitous metalloid found in...  7440-38-2     104734   \n",
+       "1  Lead is a soft and malleable heavy and post-tr...  7439-92-1      73212   \n",
+       "2  Mercury is a metal that is a liquid at room te...  7439-97-6      26623   \n",
+       "3  Vinyl chloride is a man-made organic compound,...    75-01-4       6338   \n",
+       "4  Benzene is a toxic, volatile, flammable liquid...    71-43-2        241   \n",
+       "5  Cadmium (group IIB of the periodic table of el...  7440-43-9      31193   \n",
+       "6  Benzo[a]pyrene is one of over 100 different po...    50-32-8       2336   \n",
+       "7  Benzo[b]fluoranthene is one of over 100 differ...   205-99-2       9153   \n",
+       "8  Chloroform is found in spearmint. Indirect foo...    67-66-3       6212   \n",
+       "9  Insecticide. Clofenotane is a major component ...    50-29-3       3036   \n",
+       "\n",
+       "  chemical_formula      weight  \\\n",
+       "0               As   74.921600   \n",
+       "1               Pb  207.976654   \n",
+       "2               Hg  201.970642   \n",
+       "3           C2H3Cl   61.992330   \n",
+       "4             C6H6   78.046950   \n",
+       "5               Cd  113.903358   \n",
+       "6           C20H12  252.093900   \n",
+       "7           C20H12  252.093900   \n",
+       "8            CHCl3  117.914380   \n",
+       "9         C14H9Cl5  351.914690   \n",
+       "\n",
+       "                                          appearance  ...      chembl_id  \\\n",
+       "0                               Grey metallic solid.  ...            NaN   \n",
+       "1  Bluish-white metallic solid, turns grey when e...  ...            NaN   \n",
+       "2                            Silver metallic liquid.  ...            NaN   \n",
+       "3         Colorless gas, usually stored as a liquid.  ...            NaN   \n",
+       "4                                  Colorless liquid.  ...   CHEMBL277500   \n",
+       "5                       Bluish-white metallic solid.  ...            NaN   \n",
+       "6                                 Pale yellow solid.  ...    CHEMBL31184   \n",
+       "7                                   Colorless solid.  ...  CHEMBL1337502   \n",
+       "8                                  Colorless liquid.  ...    CHEMBL44618   \n",
+       "9                                      White powder.  ...   CHEMBL416898   \n",
+       "\n",
+       "  chemspider_id biodb_id                                synthesis_reference  \\\n",
+       "0         94549      NaN                                                NaN   \n",
+       "1         65967      NaN                                                NaN   \n",
+       "2         24800      NaN                                                NaN   \n",
+       "3           NaN      NaN                                                NaN   \n",
+       "4           236      NaN  Copisarow, Maurice; Long, Cyril N H. The Fried...   \n",
+       "5         28935      NaN                                                NaN   \n",
+       "6          2246      NaN                                                NaN   \n",
+       "7          8799      NaN                                                NaN   \n",
+       "8          5977      NaN                                                NaN   \n",
+       "9          2928      NaN                                                NaN   \n",
+       "\n",
+       "  structure_image_caption                                      synonyms_list  \\\n",
+       "0                     NaN  Arsenic ion\\r\\nArsenic(3+)\\r\\nArsenic(3+) ion\\...   \n",
+       "1                     NaN  Lead (II) cation\\r\\nLead ion\\r\\nLead ion (Pb2+...   \n",
+       "2                     NaN  Hg(2+)\\r\\nHg2+\\r\\nMercuric ion\\r\\nMercury ion\\...   \n",
+       "3                     NaN  Chloroethene\\r\\nChloroethylene\\r\\nMonochloroet...   \n",
+       "4                     NaN  Annulene\\r\\nAromatic alkane\\r\\nBenzeen\\r\\nBenz...   \n",
+       "5                     NaN  Cadmium ion\\r\\nCadmium(2+)\\r\\nCadmium(2+) ion\\...   \n",
+       "6                     NaN  1,2-Benzpyrene\\r\\n3,4 Benzopyrene\\r\\n3,4 Benzp...   \n",
+       "7                     NaN  2, 3-Benzofluoranthene\\r\\n2,3-Benzfluoranthene...   \n",
+       "8                     NaN  1,1,1-Trichloromethane\\r\\nCF\\r\\nCHCl3\\r\\nFormy...   \n",
+       "9                     NaN  1,1'-(2,2,2-Trichloroethane-1,1-diyl)bis(4-chl...   \n",
+       "\n",
+       "                                               types  \\\n",
+       "0  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
+       "1  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
+       "2  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
+       "3  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
+       "4  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
+       "5  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
+       "6  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
+       "7  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
+       "8  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
+       "9  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
+       "\n",
+       "                                  cellular_locations  \\\n",
+       "0  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
+       "1  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
+       "2  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
+       "3  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
+       "4  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
+       "5  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
+       "6  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
+       "7  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
+       "8  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
+       "9  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
+       "\n",
+       "                                             tissues pathways  \n",
+       "0                                                 []       []  \n",
+       "1                                                 []       []  \n",
+       "2                                                 []       []  \n",
+       "3                                                 []       []  \n",
+       "4  [{'id': 4, 'name': 'Bone Marrow', 'created_at'...       []  \n",
+       "5                                                 []       []  \n",
+       "6                                                 []       []  \n",
+       "7                                                 []       []  \n",
+       "8                                                 []       []  \n",
+       "9                                                 []       []  \n",
+       "\n",
+       "[10 rows x 58 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -295,142 +428,22 @@
        "</table>\n",
        "<p>10 rows × 58 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "  Unnamed: 0  id    title           common_name  \\\n",
-       "0          0   2  T3D0001               Arsenic   \n",
-       "1          1   3  T3D0002                  Lead   \n",
-       "2          2   4  T3D0003               Mercury   \n",
-       "3          3   5  T3D0004        Vinyl chloride   \n",
-       "4          4   7  T3D0006               Benzene   \n",
-       "5          5   8  T3D0007               Cadmium   \n",
-       "6          6  10  T3D0009        Benzo[a]pyrene   \n",
-       "7          7  11  T3D0010  Benzo[b]fluoranthene   \n",
-       "8          8  12  T3D0011            Chloroform   \n",
-       "9          9  13  T3D0012           Clofenotane   \n",
-       "\n",
-       "                                         description        cas pubchem_id  \\\n",
-       "0  Arsenic(As) is a ubiquitous metalloid found in...  7440-38-2     104734   \n",
-       "1  Lead is a soft and malleable heavy and post-tr...  7439-92-1      73212   \n",
-       "2  Mercury is a metal that is a liquid at room te...  7439-97-6      26623   \n",
-       "3  Vinyl chloride is a man-made organic compound,...    75-01-4       6338   \n",
-       "4  Benzene is a toxic, volatile, flammable liquid...    71-43-2        241   \n",
-       "5  Cadmium (group IIB of the periodic table of el...  7440-43-9      31193   \n",
-       "6  Benzo[a]pyrene is one of over 100 different po...    50-32-8       2336   \n",
-       "7  Benzo[b]fluoranthene is one of over 100 differ...   205-99-2       9153   \n",
-       "8  Chloroform is found in spearmint. Indirect foo...    67-66-3       6212   \n",
-       "9  Insecticide. Clofenotane is a major component ...    50-29-3       3036   \n",
-       "\n",
-       "  chemical_formula      weight  \\\n",
-       "0               As   74.921600   \n",
-       "1               Pb  207.976654   \n",
-       "2               Hg  201.970642   \n",
-       "3           C2H3Cl   61.992330   \n",
-       "4             C6H6   78.046950   \n",
-       "5               Cd  113.903358   \n",
-       "6           C20H12  252.093900   \n",
-       "7           C20H12  252.093900   \n",
-       "8            CHCl3  117.914380   \n",
-       "9         C14H9Cl5  351.914690   \n",
-       "\n",
-       "                                          appearance  ...      chembl_id  \\\n",
-       "0                               Grey metallic solid.  ...            NaN   \n",
-       "1  Bluish-white metallic solid, turns grey when e...  ...            NaN   \n",
-       "2                            Silver metallic liquid.  ...            NaN   \n",
-       "3         Colorless gas, usually stored as a liquid.  ...            NaN   \n",
-       "4                                  Colorless liquid.  ...   CHEMBL277500   \n",
-       "5                       Bluish-white metallic solid.  ...            NaN   \n",
-       "6                                 Pale yellow solid.  ...    CHEMBL31184   \n",
-       "7                                   Colorless solid.  ...  CHEMBL1337502   \n",
-       "8                                  Colorless liquid.  ...    CHEMBL44618   \n",
-       "9                                      White powder.  ...   CHEMBL416898   \n",
-       "\n",
-       "  chemspider_id biodb_id                                synthesis_reference  \\\n",
-       "0         94549      NaN                                                NaN   \n",
-       "1         65967      NaN                                                NaN   \n",
-       "2         24800      NaN                                                NaN   \n",
-       "3           NaN      NaN                                                NaN   \n",
-       "4           236      NaN  Copisarow, Maurice; Long, Cyril N H. The Fried...   \n",
-       "5         28935      NaN                                                NaN   \n",
-       "6          2246      NaN                                                NaN   \n",
-       "7          8799      NaN                                                NaN   \n",
-       "8          5977      NaN                                                NaN   \n",
-       "9          2928      NaN                                                NaN   \n",
-       "\n",
-       "  structure_image_caption                                      synonyms_list  \\\n",
-       "0                     NaN  Arsenic ion\\r\\nArsenic(3+)\\r\\nArsenic(3+) ion\\...   \n",
-       "1                     NaN  Lead (II) cation\\r\\nLead ion\\r\\nLead ion (Pb2+...   \n",
-       "2                     NaN  Hg(2+)\\r\\nHg2+\\r\\nMercuric ion\\r\\nMercury ion\\...   \n",
-       "3                     NaN  Chloroethene\\r\\nChloroethylene\\r\\nMonochloroet...   \n",
-       "4                     NaN  Annulene\\r\\nAromatic alkane\\r\\nBenzeen\\r\\nBenz...   \n",
-       "5                     NaN  Cadmium ion\\r\\nCadmium(2+)\\r\\nCadmium(2+) ion\\...   \n",
-       "6                     NaN  1,2-Benzpyrene\\r\\n3,4 Benzopyrene\\r\\n3,4 Benzp...   \n",
-       "7                     NaN  2, 3-Benzofluoranthene\\r\\n2,3-Benzfluoranthene...   \n",
-       "8                     NaN  1,1,1-Trichloromethane\\r\\nCF\\r\\nCHCl3\\r\\nFormy...   \n",
-       "9                     NaN  1,1'-(2,2,2-Trichloroethane-1,1-diyl)bis(4-chl...   \n",
-       "\n",
-       "                                               types  \\\n",
-       "0  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "1  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "2  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "3  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "4  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "5  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "6  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "7  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "8  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "9  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "\n",
-       "                                  cellular_locations  \\\n",
-       "0  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "1  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "2  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "3  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "4  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "5  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "6  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
-       "7  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
-       "8  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "9  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
-       "\n",
-       "                                             tissues pathways  \n",
-       "0                                                 []       []  \n",
-       "1                                                 []       []  \n",
-       "2                                                 []       []  \n",
-       "3                                                 []       []  \n",
-       "4  [{'id': 4, 'name': 'Bone Marrow', 'created_at'...       []  \n",
-       "5                                                 []       []  \n",
-       "6                                                 []       []  \n",
-       "7                                                 []       []  \n",
-       "8                                                 []       []  \n",
-       "9                                                 []       []  \n",
-       "\n",
-       "[10 rows x 58 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "file_id = \"1i_H46ci0vi-B17v8UKIGfpQeGRpaa2uI\"  # ID файла на Google Drive\n",
-    "file_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
-    "\n",
-    "raw_data = pd.read_csv(file_url)     # читаем файл\n",
-    "\n",
-    "raw_data.head(10)         # выводим на экран первые 10 строк для проверки"
-   ]
+   "execution_count": 33
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acdfd3fe-603e-436c-997c-180efd9943da",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": "",
+   "id": "deebd448a3ab8d66"
   }
  ],
  "metadata": {
