--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "code",
    "id": "417381ee-993b-45a6-94cd-258fcc8cc2e8",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-29T16:52:27.787653Z",
-     "start_time": "2025-09-29T16:52:23.223341Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -27,415 +26,8 @@
     "\n",
     "df.head(10)"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "  Unnamed: 0  id    title           common_name  \\\n",
-       "0          0   2  T3D0001               Arsenic   \n",
-       "1          1   3  T3D0002                  Lead   \n",
-       "2          2   4  T3D0003               Mercury   \n",
-       "3          3   5  T3D0004        Vinyl chloride   \n",
-       "4          4   7  T3D0006               Benzene   \n",
-       "5          5   8  T3D0007               Cadmium   \n",
-       "6          6  10  T3D0009        Benzo[a]pyrene   \n",
-       "7          7  11  T3D0010  Benzo[b]fluoranthene   \n",
-       "8          8  12  T3D0011            Chloroform   \n",
-       "9          9  13  T3D0012           Clofenotane   \n",
-       "\n",
-       "                                         description        cas pubchem_id  \\\n",
-       "0  Arsenic(As) is a ubiquitous metalloid found in...  7440-38-2     104734   \n",
-       "1  Lead is a soft and malleable heavy and post-tr...  7439-92-1      73212   \n",
-       "2  Mercury is a metal that is a liquid at room te...  7439-97-6      26623   \n",
-       "3  Vinyl chloride is a man-made organic compound,...    75-01-4       6338   \n",
-       "4  Benzene is a toxic, volatile, flammable liquid...    71-43-2        241   \n",
-       "5  Cadmium (group IIB of the periodic table of el...  7440-43-9      31193   \n",
-       "6  Benzo[a]pyrene is one of over 100 different po...    50-32-8       2336   \n",
-       "7  Benzo[b]fluoranthene is one of over 100 differ...   205-99-2       9153   \n",
-       "8  Chloroform is found in spearmint. Indirect foo...    67-66-3       6212   \n",
-       "9  Insecticide. Clofenotane is a major component ...    50-29-3       3036   \n",
-       "\n",
-       "  chemical_formula      weight  \\\n",
-       "0               As   74.921600   \n",
-       "1               Pb  207.976654   \n",
-       "2               Hg  201.970642   \n",
-       "3           C2H3Cl   61.992330   \n",
-       "4             C6H6   78.046950   \n",
-       "5               Cd  113.903358   \n",
-       "6           C20H12  252.093900   \n",
-       "7           C20H12  252.093900   \n",
-       "8            CHCl3  117.914380   \n",
-       "9         C14H9Cl5  351.914690   \n",
-       "\n",
-       "                                          appearance  ...      chembl_id  \\\n",
-       "0                               Grey metallic solid.  ...            NaN   \n",
-       "1  Bluish-white metallic solid, turns grey when e...  ...            NaN   \n",
-       "2                            Silver metallic liquid.  ...            NaN   \n",
-       "3         Colorless gas, usually stored as a liquid.  ...            NaN   \n",
-       "4                                  Colorless liquid.  ...   CHEMBL277500   \n",
-       "5                       Bluish-white metallic solid.  ...            NaN   \n",
-       "6                                 Pale yellow solid.  ...    CHEMBL31184   \n",
-       "7                                   Colorless solid.  ...  CHEMBL1337502   \n",
-       "8                                  Colorless liquid.  ...    CHEMBL44618   \n",
-       "9                                      White powder.  ...   CHEMBL416898   \n",
-       "\n",
-       "  chemspider_id biodb_id                                synthesis_reference  \\\n",
-       "0         94549      NaN                                                NaN   \n",
-       "1         65967      NaN                                                NaN   \n",
-       "2         24800      NaN                                                NaN   \n",
-       "3           NaN      NaN                                                NaN   \n",
-       "4           236      NaN  Copisarow, Maurice; Long, Cyril N H. The Fried...   \n",
-       "5         28935      NaN                                                NaN   \n",
-       "6          2246      NaN                                                NaN   \n",
-       "7          8799      NaN                                                NaN   \n",
-       "8          5977      NaN                                                NaN   \n",
-       "9          2928      NaN                                                NaN   \n",
-       "\n",
-       "  structure_image_caption                                      synonyms_list  \\\n",
-       "0                     NaN  Arsenic ion\\r\\nArsenic(3+)\\r\\nArsenic(3+) ion\\...   \n",
-       "1                     NaN  Lead (II) cation\\r\\nLead ion\\r\\nLead ion (Pb2+...   \n",
-       "2                     NaN  Hg(2+)\\r\\nHg2+\\r\\nMercuric ion\\r\\nMercury ion\\...   \n",
-       "3                     NaN  Chloroethene\\r\\nChloroethylene\\r\\nMonochloroet...   \n",
-       "4                     NaN  Annulene\\r\\nAromatic alkane\\r\\nBenzeen\\r\\nBenz...   \n",
-       "5                     NaN  Cadmium ion\\r\\nCadmium(2+)\\r\\nCadmium(2+) ion\\...   \n",
-       "6                     NaN  1,2-Benzpyrene\\r\\n3,4 Benzopyrene\\r\\n3,4 Benzp...   \n",
-       "7                     NaN  2, 3-Benzofluoranthene\\r\\n2,3-Benzfluoranthene...   \n",
-       "8                     NaN  1,1,1-Trichloromethane\\r\\nCF\\r\\nCHCl3\\r\\nFormy...   \n",
-       "9                     NaN  1,1'-(2,2,2-Trichloroethane-1,1-diyl)bis(4-chl...   \n",
-       "\n",
-       "                                               types  \\\n",
-       "0  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "1  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "2  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "3  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "4  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "5  [{'id': 1, 'type_name': 'Inorganic Compound', ...   \n",
-       "6  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "7  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "8  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "9  [{'id': 7, 'type_name': 'Organic Compound', 'c...   \n",
-       "\n",
-       "                                  cellular_locations  \\\n",
-       "0  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "1  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "2  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "3  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "4  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "5  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "6  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
-       "7  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
-       "8  [{'id': 1, 'name': 'Cytoplasm', 'created_at': ...   \n",
-       "9  [{'id': 3, 'name': 'Membrane', 'created_at': '...   \n",
-       "\n",
-       "                                             tissues pathways  \n",
-       "0                                                 []       []  \n",
-       "1                                                 []       []  \n",
-       "2                                                 []       []  \n",
-       "3                                                 []       []  \n",
-       "4  [{'id': 4, 'name': 'Bone Marrow', 'created_at'...       []  \n",
-       "5                                                 []       []  \n",
-       "6                                                 []       []  \n",
-       "7                                                 []       []  \n",
-       "8                                                 []       []  \n",
-       "9                                                 []       []  \n",
-       "\n",
-       "[10 rows x 58 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>common_name</th>\n",
-       "      <th>description</th>\n",
-       "      <th>cas</th>\n",
-       "      <th>pubchem_id</th>\n",
-       "      <th>chemical_formula</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>appearance</th>\n",
-       "      <th>...</th>\n",
-       "      <th>chembl_id</th>\n",
-       "      <th>chemspider_id</th>\n",
-       "      <th>biodb_id</th>\n",
-       "      <th>synthesis_reference</th>\n",
-       "      <th>structure_image_caption</th>\n",
-       "      <th>synonyms_list</th>\n",
-       "      <th>types</th>\n",
-       "      <th>cellular_locations</th>\n",
-       "      <th>tissues</th>\n",
-       "      <th>pathways</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>T3D0001</td>\n",
-       "      <td>Arsenic</td>\n",
-       "      <td>Arsenic(As) is a ubiquitous metalloid found in...</td>\n",
-       "      <td>7440-38-2</td>\n",
-       "      <td>104734</td>\n",
-       "      <td>As</td>\n",
-       "      <td>74.921600</td>\n",
-       "      <td>Grey metallic solid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>94549</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Arsenic ion\\r\\nArsenic(3+)\\r\\nArsenic(3+) ion\\...</td>\n",
-       "      <td>[{'id': 1, 'type_name': 'Inorganic Compound', ...</td>\n",
-       "      <td>[{'id': 1, 'name': 'Cytoplasm', 'created_at': ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>T3D0002</td>\n",
-       "      <td>Lead</td>\n",
-       "      <td>Lead is a soft and malleable heavy and post-tr...</td>\n",
-       "      <td>7439-92-1</td>\n",
-       "      <td>73212</td>\n",
-       "      <td>Pb</td>\n",
-       "      <td>207.976654</td>\n",
-       "      <td>Bluish-white metallic solid, turns grey when e...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65967</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Lead (II) cation\\r\\nLead ion\\r\\nLead ion (Pb2+...</td>\n",
-       "      <td>[{'id': 1, 'type_name': 'Inorganic Compound', ...</td>\n",
-       "      <td>[{'id': 1, 'name': 'Cytoplasm', 'created_at': ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>T3D0003</td>\n",
-       "      <td>Mercury</td>\n",
-       "      <td>Mercury is a metal that is a liquid at room te...</td>\n",
-       "      <td>7439-97-6</td>\n",
-       "      <td>26623</td>\n",
-       "      <td>Hg</td>\n",
-       "      <td>201.970642</td>\n",
-       "      <td>Silver metallic liquid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24800</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Hg(2+)\\r\\nHg2+\\r\\nMercuric ion\\r\\nMercury ion\\...</td>\n",
-       "      <td>[{'id': 1, 'type_name': 'Inorganic Compound', ...</td>\n",
-       "      <td>[{'id': 1, 'name': 'Cytoplasm', 'created_at': ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>T3D0004</td>\n",
-       "      <td>Vinyl chloride</td>\n",
-       "      <td>Vinyl chloride is a man-made organic compound,...</td>\n",
-       "      <td>75-01-4</td>\n",
-       "      <td>6338</td>\n",
-       "      <td>C2H3Cl</td>\n",
-       "      <td>61.992330</td>\n",
-       "      <td>Colorless gas, usually stored as a liquid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chloroethene\\r\\nChloroethylene\\r\\nMonochloroet...</td>\n",
-       "      <td>[{'id': 7, 'type_name': 'Organic Compound', 'c...</td>\n",
-       "      <td>[{'id': 1, 'name': 'Cytoplasm', 'created_at': ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>T3D0006</td>\n",
-       "      <td>Benzene</td>\n",
-       "      <td>Benzene is a toxic, volatile, flammable liquid...</td>\n",
-       "      <td>71-43-2</td>\n",
-       "      <td>241</td>\n",
-       "      <td>C6H6</td>\n",
-       "      <td>78.046950</td>\n",
-       "      <td>Colorless liquid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CHEMBL277500</td>\n",
-       "      <td>236</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Copisarow, Maurice; Long, Cyril N H. The Fried...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Annulene\\r\\nAromatic alkane\\r\\nBenzeen\\r\\nBenz...</td>\n",
-       "      <td>[{'id': 7, 'type_name': 'Organic Compound', 'c...</td>\n",
-       "      <td>[{'id': 1, 'name': 'Cytoplasm', 'created_at': ...</td>\n",
-       "      <td>[{'id': 4, 'name': 'Bone Marrow', 'created_at'...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>T3D0007</td>\n",
-       "      <td>Cadmium</td>\n",
-       "      <td>Cadmium (group IIB of the periodic table of el...</td>\n",
-       "      <td>7440-43-9</td>\n",
-       "      <td>31193</td>\n",
-       "      <td>Cd</td>\n",
-       "      <td>113.903358</td>\n",
-       "      <td>Bluish-white metallic solid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28935</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Cadmium ion\\r\\nCadmium(2+)\\r\\nCadmium(2+) ion\\...</td>\n",
-       "      <td>[{'id': 1, 'type_name': 'Inorganic Compound', ...</td>\n",
-       "      <td>[{'id': 1, 'name': 'Cytoplasm', 'created_at': ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>T3D0009</td>\n",
-       "      <td>Benzo[a]pyrene</td>\n",
-       "      <td>Benzo[a]pyrene is one of over 100 different po...</td>\n",
-       "      <td>50-32-8</td>\n",
-       "      <td>2336</td>\n",
-       "      <td>C20H12</td>\n",
-       "      <td>252.093900</td>\n",
-       "      <td>Pale yellow solid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CHEMBL31184</td>\n",
-       "      <td>2246</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1,2-Benzpyrene\\r\\n3,4 Benzopyrene\\r\\n3,4 Benzp...</td>\n",
-       "      <td>[{'id': 7, 'type_name': 'Organic Compound', 'c...</td>\n",
-       "      <td>[{'id': 3, 'name': 'Membrane', 'created_at': '...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>T3D0010</td>\n",
-       "      <td>Benzo[b]fluoranthene</td>\n",
-       "      <td>Benzo[b]fluoranthene is one of over 100 differ...</td>\n",
-       "      <td>205-99-2</td>\n",
-       "      <td>9153</td>\n",
-       "      <td>C20H12</td>\n",
-       "      <td>252.093900</td>\n",
-       "      <td>Colorless solid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CHEMBL1337502</td>\n",
-       "      <td>8799</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2, 3-Benzofluoranthene\\r\\n2,3-Benzfluoranthene...</td>\n",
-       "      <td>[{'id': 7, 'type_name': 'Organic Compound', 'c...</td>\n",
-       "      <td>[{'id': 3, 'name': 'Membrane', 'created_at': '...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T3D0011</td>\n",
-       "      <td>Chloroform</td>\n",
-       "      <td>Chloroform is found in spearmint. Indirect foo...</td>\n",
-       "      <td>67-66-3</td>\n",
-       "      <td>6212</td>\n",
-       "      <td>CHCl3</td>\n",
-       "      <td>117.914380</td>\n",
-       "      <td>Colorless liquid.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CHEMBL44618</td>\n",
-       "      <td>5977</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1,1,1-Trichloromethane\\r\\nCF\\r\\nCHCl3\\r\\nFormy...</td>\n",
-       "      <td>[{'id': 7, 'type_name': 'Organic Compound', 'c...</td>\n",
-       "      <td>[{'id': 1, 'name': 'Cytoplasm', 'created_at': ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>13</td>\n",
-       "      <td>T3D0012</td>\n",
-       "      <td>Clofenotane</td>\n",
-       "      <td>Insecticide. Clofenotane is a major component ...</td>\n",
-       "      <td>50-29-3</td>\n",
-       "      <td>3036</td>\n",
-       "      <td>C14H9Cl5</td>\n",
-       "      <td>351.914690</td>\n",
-       "      <td>White powder.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CHEMBL416898</td>\n",
-       "      <td>2928</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1,1'-(2,2,2-Trichloroethane-1,1-diyl)bis(4-chl...</td>\n",
-       "      <td>[{'id': 7, 'type_name': 'Organic Compound', 'c...</td>\n",
-       "      <td>[{'id': 3, 'name': 'Membrane', 'created_at': '...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10 rows × 58 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 33
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
