finished db connection

--- a/write_to_db.ipynb
+++ b/write_to_db.ipynb
@@ -21,49 +21,6 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-22T22:29:04.614018Z",
-     "start_time": "2025-10-22T22:29:04.592022Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "engine = create_engine(\"sqlite:///creds.db\")",
-   "id": "9b3c1aafec8b8e63",
-   "outputs": [],
-   "execution_count": 78
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-22T22:29:04.627756Z",
-     "start_time": "2025-10-22T22:29:04.620990Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "session = Session(bind=engine)",
-   "id": "161ff17de994744e",
-   "outputs": [],
-   "execution_count": 79
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-22T22:29:04.655664Z",
-     "start_time": "2025-10-22T22:29:04.634954Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "with session as s:\n",
-    "    result = s.execute(text(\"SELECT * FROM access LIMIT 10\")).fetchall()\n",
-    "host, port, user, password = result[0]"
-   ],
-   "id": "33807de39aae1d36",
-   "outputs": [],
-   "execution_count": 80
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2025-10-22T22:29:04.667175Z",
      "start_time": "2025-10-22T22:29:04.662874Z"
     }
@@ -90,7 +47,7 @@
    "cell_type": "code",
    "source": [
     "engine = create_engine(\n",
-    "    f\"postgresql+psycopg2://{db_user}:{db_password}@{db_url}:{db_port}/{db_root_base}\",  # noqa\n",
+    "    f\"postgresql+psycopg2://{db_user}:{db_password}@{db_url}:{db_port}/{db_root_base}\",\n",
     "    pool_recycle=3600\n",
     ")"
    ],
